# wa

./: CHANGELOG.md  README.md  default.nix  wa.cabal
nix/: overrides.nix
src/: Wa.hs
src/Wa/: Api.hs  Dual.hs  Evaluate.hs  Examples.hs  Parser.hs  Types.hs
