cabal-version: 2.4
name:
  wa
version:
  0.1
synopsis:
  commandline calculator
description:
  commandline calculator
homepage:
  https://github.com/chessai/wa
bug-reports:
  https://github.com/chessai/wa/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Utility
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    Wa
    Wa.Api
    Wa.Dual
    Wa.Evaluate
    Wa.Examples
    Wa.Parser
    Wa.Types
  build-depends:
    , base >= 4.10.1.0 && < 4.13
    , linear >= 1.20 && < 1.21
    , megaparsec >= 7 && < 7.1
    , parser-combinators >= 1 && < 2
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/wa.git
